# AI44PT

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_IMPLEMENTATION_ISSUES.md  CONFIG_MERGE_SUMMARY.md  README.md  README_modular.md  REFACTORING_COMPLETE.md  pyproject.toml  requirements.txt  requirements.txt.bak
.claude/: settings.local.json
archive/: 4pt_noRAG.ipynb  norag.ipynb  norag_bak_1005.ipynb
code/: 4pt_noRAG.py  README.md  __init__.py  analyzer.py  batch_analyzer.py  challenge_reporting.py  config.py  document_reader.py  logging_utils.py  main.py  pipeline_main.py  prompts.py  reporting.py  response_parser.py  result_saver.py  test_openai_connection.py  voting.py
config/: base.yaml  parse.yaml
data/example/: jrg_14.md
deliverables/: .latest_bundle_name  nature10_human_vs_ai_reading_report_20260211.md  nature10_true_ai_results_locator_20260211.xlsx  nature10_v3_feedback_wrapup_en_20260211_164514.pptx
docs/: HuggingFace_Deployment_Proposal.md
examples/: run_full_pipeline.py  run_parse_only.py
hf_demo/: README.md  app.py
notebooks/: 4pt_noRAG.ipynb  pipeline.py  pipeline_alpha_majorityvote.ipynb  pipeline_alpha_majorityvote.py  pipeline_quick_draft(demo).ipynb  pipeline_quick_draft(personal).ipynb
results/: 1_run3_251013103640_success.json  3_run2_251013104625_success.json  4_run2_251013105036_success.json  4pt_40articles_preview.xlsx  4pt_analysis_sample_paper_20251005_004505.md  4pt_analysis_sample_paper_20251005_004505.txt  4pt_analysis_sample_paper_20251005_005709.md  4pt_analysis_sample_paper_20251005_005709.txt  5_run2_251013105531_success.json  (+36 more)
(+768 files in other folders)
